--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
 				padding: 0px;
 				margin: 16px 10px;
 			}
-			ul.contentsUl li{
-				
-			}
 			ul.contentsUl a{
 				display: block;
 				background-color: #66cc99;
@@ -432,7 +429,7 @@
 				</td></tr>
 				<tr><td>
 				<input id="inputButton" type="button" value="入力" onclick="inputData()">
-				<input id="inputClearButton" type="button" value="リセット" onclick="">
+				<input id="inputClearButton" type="button" value="リセット" onclick="window.location.reload();">
 				</td></tr>
 			</table>
 			<div id="shareOption">
