--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 				top: 0px;
 				left: 0px;
 			}
+			img{
+				border: 2px solid #ffff00;
+			}
 		</style>
 		<script>
 			let DATATEXT = [], resultText, frags = [0, 0, -1, -1, -1], shareRateData = [];
@@ -483,7 +486,75 @@
 				</td></tr>
 			</table>
 		</div>
+		<br><br><br>
 		<div id="example">
+			<h1>データ集計方法</h1>
+			<h2>①軍団員データをコピー</h2>
+			<img src="TotalExpImg/IMG_2091.PNG" width="350px" height="700px" alt="pic1">
+			<div>
+				まずはテキストのコピーをします。画面を長押しして、画像のようにしてください。
+			</div><br>
+			<img src="TotalExpImg/IMG_2079.PNG" width="350px" height="700px" alt="pic1">
+			<div>
+				コピーし始めは団員名よりも上であればどこでも大丈夫です。
+			</div><br>
+			<img src="TotalExpImg/IMG_2080.PNG" width="350px" height="700px" alt="pic1">
+			<div>
+				コピー範囲はページ下のＮＥＸＴまでです。団員情報が全てコピー範囲に入っていれば、コピーの終端はもっと下の方でも大丈夫です。
+			</div><br>
+			<img src="TotalExpImg/IMG_2081.PNG" width="350px" height="700px" alt="pic1">
+			<div>
+				団員情報はこのようにコピー範囲に入っているため、蒼くなっています。
+			</div><br>
+			<h2>②コピーしたテキストをペースト</h2>
+			<img src="TotalExpImg/IMG_2094.PNG" width="350px" height="700px" alt="pic1">
+			<div>
+				今コピーした団員情報をデータ入力の欄にペーストしてください。
+			</div><br>
+			<img src="TotalExpImg/IMG_2095.PNG" width="350px" height="700px" alt="pic1">
+			<div>
+				ペーストしたらこうなります。
+			</div><br>
+			<h2>③入力ボタンを押す</h2>
+			<img src="TotalExpImg/IMG_2096.PNG" width="350px" height="700px" alt="pic1">
+			<dev>
+				入力ボタンを押すと、画像のように結果出力の欄に集計結果が出力されます。ここで、「結果をコピー」ボタンを押すと、結果をコピーできます。(長押しコピーしなくて大丈夫です。)
+			</dev><br>
+			<img src="TotalExpImg/IMG_2100.PNG" width="350px" height="700px" alt="pic1">
+			<div>
+				集計結果のテキストはこんな感じです。名前だけはそのまま集計結果に反映されてしまうため、見やすいように修正をお願いします。
+			</div><br>
+			<h2>④追加ボタンでデータ追加</h2>
+			<img src="TotalExpImg/IMG_2086.PNG" width="350px" height="700px" alt="pic1">
+			<div>
+				次のページも先程と同じようにコピーしてください。コピーは下から上に向かってやるとやりやすいです(iPhoneでは)。
+			</div><br>
+			<img src="TotalExpImg/IMG_2097.PNG" width="350px" height="700px" alt="pic1">
+			<div>
+				コピーしたテキストを空になっているデータ入力欄にペーストしてください。
+			</div><br>
+			<img src="TotalExpImg/IMG_2099.PNG" width="350px" height="700px" alt="pic1">
+			<div>
+				先程入力ボタンだったところが追加ボタンになっています。追加ボタンを押すと、データ入力欄が空になります。出力に変化がなさそうですが、ちゃんとデータが追加されています。
+			</div><br>
+			<img src="TotalExpImg/IMG_2102.PNG" width="350px" height="700px" alt="pic1">
+			<div>
+				結果をコピーボタンを押すと、「コピーしました。」と出ます。これが出るとコピー出来てます。
+			</div><br>
+			<img src="TotalExpImg/IMG_2101.PNG" width="350px" height="700px" alt="pic1">
+			<div>
+				ペーストして確認すると、データが追加されているのがわかります。
+			</div><br>
+			<h2>データ集計まとめ</h2>
+			<div>
+				①軍団員データをコピー<br>
+				②入力欄にペースト<br>
+				③入力ボタンを押す<br>
+				④次のページをコピー<br>
+				⑤追加ボタンを押す<br>
+				⑥結果をコピーボタンを押す<br>
+				⑦完了
+			</div>
 		</div>
 		<br><br><br><br><br><br><br><br>
 		<br><br><br><br><br><br><br><br>
