--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
 			img{
 				border: 2px solid #ffff00;
 			}
+			details > summary{
+				font-size: large;
+				border:solid  2px;
+				background-color: aqua;
+			}
 		</style>
 		<script>
 			let DATATEXT = [], resultText, frags = [0, 0, -1, -1, -1], shareRateData = [];
@@ -491,7 +496,9 @@
 		</div>
 		<br><br><br>
 		<div id="example">
-			<h1>データ集計方法</h1>
+			<h2>利用方法(タップして表示)</h2>
+			<details>
+			<summary>データ集計方法</summary>
 			<h2>①軍団員データをコピー</h2>
 			<img src="TotalExpImg/IMG_2091.PNG" width="350px" height="700px" alt="pic1">
 			<div>
@@ -558,6 +565,15 @@
 				⑥結果をコピーボタンを押す<br>
 				⑦完了
 			</div>
+			</details>
+			<br>
+			<details>
+			<summary>データ並び替え方法</summary>
+			</details>
+			<br>
+			<details>
+			<summary>分配計算方法</summary>
+			</details>
 		</div>
 		<br><br><br><br><br><br><br><br>
 		<br><br><br><br><br><br><br><br>
